// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-dYOLZc jbDZtn"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      active="[object Object]"
      borderradius="6px"
      class="sc-hKDTPf sc-fmZSGO dIkYig cFMqSN sc-jZhnRx kgYKjF"
      color="primary"
      data-testid="menu-toggle"
      disabled=""
      font-size="13px"
      height="32px"
      hover="[object Object]"
      normal="[object Object]"
      paddinginline="8px"
    >
      Save
      <div
        class="sc-gwsNht iKvryC"
        pr="0.5"
      />
      <span
        class="sc-hBDmJg bzQSRF"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#B3BAC1"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-dACwDz fugJLZ"
  >
    <div
      class="sc-kAFUCS dRISfq"
      data-floating-ui-focusable=""
      id=":r2:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-kThouk iBbJyp"
        maxheight="none"
      >
        <hr
          class="sc-dibcMh fCkdsF"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-dibcMh fCkdsF"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save as draft
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-dYOLZc jbDZtn"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      active="[object Object]"
      borderradius="6px"
      class="sc-hKDTPf sc-fmZSGO dIkYig cFMqSN sc-jZhnRx kgYKjF"
      color="primary"
      data-testid="menu-toggle"
      font-size="13px"
      height="32px"
      hover="[object Object]"
      normal="[object Object]"
      paddinginline="8px"
    >
      Save
      <div
        class="sc-gwsNht iKvryC"
        pr="0.5"
      />
      <span
        class="sc-hBDmJg bzQSRF"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#FDFEFF"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-dACwDz kJZjmJ"
  >
    <div
      class="sc-dHKmnV dkgcXg fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-kHNKno jPZoGU"
      />
    </div>
    <div
      class="sc-kAFUCS dRISfq"
      data-floating-ui-focusable=""
      id=":r0:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-kThouk iBbJyp"
        maxheight="none"
      >
        <hr
          class="sc-dibcMh fCkdsF"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-dibcMh fCkdsF"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save as draft
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-dYOLZc jbDZtn"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      active="[object Object]"
      borderradius="6px"
      class="sc-hKDTPf sc-fmZSGO dIkYig gRGSei sc-jMpmlX gqlPbs"
      color="primary"
      disabled=""
      font-size="13px"
      height="32px"
      hover="[object Object]"
      normal="[object Object]"
      paddinginline="8px"
    >
      Save
    </button>
    <button
      active="[object Object]"
      borderradius="6px"
      class="sc-hKDTPf sc-fmZSGO dIkYig gRGSei sc-hoLldG dREWUO"
      color="primary"
      data-testid="menu-toggle"
      disabled=""
      font-size="13px"
      height="32px"
      hover="[object Object]"
      normal="[object Object]"
      paddinginline="8px"
    >
      <span
        class="sc-hBDmJg bzQSRF"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#B3BAC1"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-dACwDz fugJLZ"
  >
    <div
      class="sc-kAFUCS dRISfq"
      data-floating-ui-focusable=""
      id=":r6:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-kThouk iBbJyp"
        maxheight="none"
      >
        <hr
          class="sc-dibcMh fCkdsF"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-dibcMh fCkdsF"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save as draft
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-dYOLZc jbDZtn"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      active="[object Object]"
      borderradius="6px"
      class="sc-hKDTPf sc-fmZSGO dIkYig gRGSei sc-jMpmlX gqlPbs"
      color="primary"
      font-size="13px"
      height="32px"
      hover="[object Object]"
      normal="[object Object]"
      paddinginline="8px"
    >
      Save
    </button>
    <button
      active="[object Object]"
      borderradius="6px"
      class="sc-hKDTPf sc-fmZSGO dIkYig gRGSei sc-hoLldG dREWUO"
      color="primary"
      data-testid="menu-toggle"
      font-size="13px"
      height="32px"
      hover="[object Object]"
      normal="[object Object]"
      paddinginline="8px"
    >
      <span
        class="sc-hBDmJg bzQSRF"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#FDFEFF"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-dACwDz kJZjmJ"
  >
    <div
      class="sc-dHKmnV dkgcXg fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-kHNKno jPZoGU"
      />
    </div>
    <div
      class="sc-kAFUCS dRISfq"
      data-floating-ui-focusable=""
      id=":r4:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-kThouk iBbJyp"
        maxheight="none"
      >
        <hr
          class="sc-dibcMh fCkdsF"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-dibcMh fCkdsF"
          color="#E2E8EA"
          mx="2"
          my="1"
          orientation="horizontal"
        />
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Save as draft
          </p>
        </div>
        <div
          active="[object Object]"
          class="sc-kieALA ioBXW"
          hover="[object Object]"
          normal="[object Object]"
        >
          <p
            align="left"
            class="sc-bXdtCk cynPHj sc-elFkmj"
            color="#041C33"
            font-size="13px"
            lineheight="1.4"
            weight="normal"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
